--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -21,3 +21,11 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.flex-container {
+  display: flex;
+  /* flex-direction: row; not needed -- default value */
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;            
+}
